# rdepinfo

./: .gitignore  build.zig  build.zig.zon  flake.nix  shell.nix
c/: CMakeLists.txt  build.zig  build.zig.zon  test.cpp
include/: rdepinfo.h
nix/r-patch/: available-packages.patch  develop.sh  flake.nix
r/: rinfo.R  rinfo.sh
src/: DebianControlFile.zig  RDescription.zig  main.zig
src/exe/discover-dependencies/: main.zig
src/exe/download-file/: main.zig
src/exe/fetch-assets/: common  main.zig
src/exe/fetch-assets/common/: config-json.zig  download.zig  root.zig
src/exe/generate-build/: main.zig
src/lib/: DebianControlFile.zig  RDescription.zig  packages.zig  parse.zig  parse_test.zig  repository.zig  repository_c.zig  repository_index.zig  root.zig  util.zig  version.zig
src/lib/common/: build.zig  build.zig.zon
src/lib/common/src/: config-json.zig  download.zig  root.zig  string_storage.zig
